[gd_scene load_steps=3 format=3 uid="uid://ja0u2vuivo8b"]

[ext_resource type="Theme" uid="uid://bcibt73qths3g" path="res://addons/tube/inspector/theme.tres" id="1_noh0l"]
[ext_resource type="Script" uid="uid://cygcobx75tkey" path="res://addons/tube/inspector/tracker_control.gd" id="1_pu2xr"]

[node name="TrackerControl" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_noh0l")
script = ExtResource("1_pu2xr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UrlLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"LabelH3"
text = "00000000000000000000"
text_overrun_behavior = 1

[node name="ConnectingTimeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ConnectingTimeContainer"]
layout_mode = 2
theme_type_variation = &"LabelH3"
text = "Connecting time"

[node name="ConnectingTimeLabel" type="Label" parent="VBoxContainer/ConnectingTimeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelH2"
text = "0.0"

[node name="SecondLabel" type="Label" parent="VBoxContainer/ConnectingTimeContainer"]
layout_mode = 2
theme_type_variation = &"LabelH3"
text = "s"

[node name="UpTimeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/UpTimeContainer"]
custom_minimum_size = Vector2(146, 0)
layout_mode = 2
theme_type_variation = &"LabelH3"
text = "Up time"

[node name="UpTimeLabel" type="Label" parent="VBoxContainer/UpTimeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelH2"
text = "0.0"

[node name="SecondLabel" type="Label" parent="VBoxContainer/UpTimeContainer"]
layout_mode = 2
theme_type_variation = &"LabelH3"
text = "s"

[node name="IntervalTimeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/IntervalTimeContainer"]
custom_minimum_size = Vector2(146, 0)
layout_mode = 2
theme_type_variation = &"LabelH3"
text = "Interval time"

[node name="IntervalTimeLeftLabel" type="Label" parent="VBoxContainer/IntervalTimeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelH2"
text = "0.0"

[node name="SlashLabel" type="Label" parent="VBoxContainer/IntervalTimeContainer"]
layout_mode = 2
theme_type_variation = &"LabelH3"
text = "/"

[node name="IntervalTimeLabel" type="Label" parent="VBoxContainer/IntervalTimeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelH2"
text = "0.0"

[node name="SecondLabel" type="Label" parent="VBoxContainer/IntervalTimeContainer"]
layout_mode = 2
theme_type_variation = &"LabelH3"
text = "s"
